--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -4,7 +4,7 @@ Each tab's child <ion-nav-view> directive will have its own
 navigation history that also transitions its views in and out.
 -->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
-  <ion-tab title="Attributes" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/attributes">
-    <ion-nav-view name="attributes"></ion-nav-view>
+  <ion-tab title="Stats" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/stats">
+    <ion-nav-view name="stats"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
