--- a/www/templates/attributes.html
+++ b/www/templates/attributes.html
@@ -3,8 +3,9 @@
     <span class="name">Ability</span>
     <span class="total">Total</span>
     <span class="modifier">Modifier</span>
+    <span class="racial">Racial</span>
     <span class="score">Score</span>
-    <span class="temporary">Temporary</span>
+    <span class="temporary">Temp.</span>
   </div>
 </div>
 <div class="item item-body abilities">
@@ -12,6 +13,7 @@
     <span class="name">{{attributeName}}</span>
     <span class="total">{{getAttributeTotal(attributeName)}}</span>
     <span class="modifier">{{getAttributeModifier(attributeName)}}</span>
+    <span class="racial">{{getAttributeRacialBonus(attributeName)}}</span>
     <span class="score"><input ng-change="saveCharacter()" ng-model="attributeValues[0]"></span>
     <span class="temporary"><input ng-change="saveCharacter()" ng-model="attributeValues[1]"></span>
   </div>
