--- a/www/templates/skills.html
+++ b/www/templates/skills.html
@@ -11,7 +11,10 @@
   <div class="skill" ng-repeat="(skillName, skillValues) in skills">
     <span class="name">{{skillName}}</span>
     <span class="total">{{getSkillTotal(skillName)}}</span>
-    <span class="modifier">{{getSkillModifier(skillName)}}</span>
+    <span class="modifier">
+      <span class="value">{{getSkillModifier(skillName)}}</span>
+      <span class="ability">({{getSkillAbility(skillName).slice(0, 3)}})</span>
+    </span>
     <span class="rank"><input ng-change="saveCharacter()" ng-model="skillValues[0]"></span>
     <span class="misc"><input ng-change="saveCharacter()" ng-model="skillValues[1]"></span>
   </div>
