--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,10 +1,5 @@
-<!--
-Create tabs with an icon and label, using the tabs-positive style.
-Each tab's child <ion-nav-view> directive will have its own
-navigation history that also transitions its views in and out.
--->
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
-  <ion-tab title="Stats" icon-off="ion-ios-gear-outline" icon-on="ion-ios-gear" href="#/tab/stats">
+  <ion-tab title="Stats" icon-off="ion-ios-gear-outline" icon-on="ion-ios-settings" href="#/tab/stats">
     <ion-nav-view name="stats"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
