--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -1,5 +1,8 @@
 <ion-tabs class="tabs-icon-top tabs-color-active-positive">
-  <ion-tab title="Stats" icon-off="ion-ios-gear-outline" icon-on="ion-ios-settings" href="#/tab/stats">
+  <ion-tab title="Profile" icon-off="ion-ios-body" icon-on="ion-ios-body" href="#/tab/profile">
+    <ion-nav-view name="profile"></ion-nav-view>
+  </ion-tab>
+  <ion-tab title="Stats" icon-off="ion-ios-settings" icon-on="ion-ios-settings-strong" href="#/tab/stats">
     <ion-nav-view name="stats"></ion-nav-view>
   </ion-tab>
 </ion-tabs>
