--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -53,15 +53,14 @@
         <div class="race col-6">
           <span class="label col-6">Race</span>
           <span class="value col-6">
-            <select ng-change="save(this)" ng-model="basicInfo.Race">
-              <option>Human</option>
-              <option>Half Orc</option>
+            <select ng-change="selectRace()" ng-model="basicInfo.Race">
+              <option>Dwarf</option>
               <option>Elf</option>
-              <option>Half Elf</option>
               <option>Gnome</option>
+              <option>Half-elf</option>
+              <option>Half-orc</option>
               <option>Halfling</option>
               <option>Human</option>
-              <option>Dwarf</option>
             </select>
           </span>
         </div>
@@ -72,7 +71,8 @@
               <option>Fine</option>
               <option>Diminutive</option>
               <option>Tiny</option>
-              <option>Normal</option>
+              <option>Small</option>
+              <option>Medium</option>
               <option>Large</option>
               <option>Huge</option>
               <option>Gargantuan</option>
