--- a/scss/ionic.app.scss
+++ b/scss/ionic.app.scss
@@ -57,7 +57,7 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   }
 }
 
-.basic-info {
+.item-body {
   font-size: 0px;
 
   [class*="col-"] {
@@ -65,6 +65,32 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
     text-align: left ;
     /*border: 1px solid red;*/
     line-height: 31px;
+
+    &.with-subtitle {
+      height: 55px;
+    }
+
+    &.with-plus {
+      padding-left: 10px;
+      &:before {
+        content: '+';
+        position: absolute;
+        left: 1px;
+      }
+    }
+
+    &.with-equals {
+      padding-left: 10px;
+      &:before {
+        content: '=';
+        position: absolute;
+        left: 1px;
+      }
+    }
+
+    &.with-plus, &.with-equals {
+      .subtitle { width: calc(100% + 10px); }
+    }
   }
 
   .col-1  { width: calc(100%/12); }
@@ -80,6 +106,23 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
   .col-11 { width: calc(1100%/12); }
   .col-12 { width: calc(1200%/12); }
 
+  .ac {
+    position: relative;
+
+    .col-1 {
+      position: relative;
+      width: calc(100%/10);
+    }
+  }
+
+  .subtitle {
+    font-size: 9px;
+    line-height: 9px;
+    position: absolute;
+    width: 100%;
+    left: 0px;
+  }
+
   .label, .value {
     display: inline-block;
     font-size: 12px;
@@ -87,7 +130,12 @@ $ionicons-font-path: "../lib/ionic/fonts" !default;
 
   .label { padding-left: 10px; }
   .value {
+    text-align: center;
+    position: relative;
+
     input, select {
+      display: inline-block;
+      text-align: center;
       background: #fff;
       width: 100%;
     }
