--- a/www/templates/tabs.html
+++ b/www/templates/tabs.html
@@ -5,4 +5,7 @@
   <ion-tab title="Stats" icon-off="ion-ios-settings" icon-on="ion-ios-settings-strong" href="#/tab/stats">
     <ion-nav-view name="stats"></ion-nav-view>
   </ion-tab>
+  <ion-tab title="Combat" icon-off="ion-heart-broken" icon-on="ion-heart-broken" href="#/tab/combat">
+    <ion-nav-view name="combat"></ion-nav-view>
+  </ion-tab>
 </ion-tabs>
