--- a/www/templates/profile.html
+++ b/www/templates/profile.html
@@ -4,23 +4,23 @@
       <div class="item item-divider">
         Basic information
       </div>
-      <div class="item item-body basic-info">
+      <div class="item item-body profile">
         <div class="name col-12">
           <span class="label col-5">Character name</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="basicInfo.Name"></span>
+          <span class="value col-7"><input ng-change="save(this)" ng-model="profile.Name"></span>
         </div>
         <div class="player col-12">
           <span class="label col-5">Player name</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="basicInfo.Player"></span>
+          <span class="value col-7"><input ng-change="save(this)" ng-model="profile.Player"></span>
         </div>
         <div class="level col-12">
           <span class="label col-5">Character level</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="basicInfo.Level"></span>
+          <span class="value col-7"><input ng-change="save(this)" ng-model="profile.Level"></span>
         </div>
         <div class="alignment col-6">
           <span class="label col-5">Alignment</span>
           <span class="value col-7">
-            <select ng-change="save(this)" ng-model="basicInfo.Alignment">
+            <select ng-change="save(this)" ng-model="profile.Alignment">
               <option>Lawful Good</option>
               <option>Lawful Neutral</option>
               <option>Lawful Evil</option>
@@ -35,25 +35,25 @@
         </div>
         <div class="campaign col-6">
           <span class="label col-5">Campaign</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="basicInfo.Campaign"></span>
+          <span class="value col-7"><input ng-change="save(this)" ng-model="profile.Campaign"></span>
         </div>
         <div class="homeland col-6">
           <span class="label col-5">Homeland</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="basicInfo.Homeland"></span>
+          <span class="value col-7"><input ng-change="save(this)" ng-model="profile.Homeland"></span>
         </div>
         <div class="deity col-6">
           <span class="label col-5">Deity</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="basicInfo.Deity"></span>
+          <span class="value col-7"><input ng-change="save(this)" ng-model="profile.Deity"></span>
         </div>
       </div>
       <div class="item item-divider">
         Physical aspets
       </div>
-      <div class="item item-body basic-info">
+      <div class="item item-body profile">
         <div class="race col-6">
           <span class="label col-6">Race</span>
           <span class="value col-6">
-            <select ng-change="selectRace()" ng-model="basicInfo.Race">
+            <select ng-change="selectRace()" ng-model="profile.Race">
               <option>Dwarf</option>
               <option>Elf</option>
               <option>Gnome</option>
@@ -67,7 +67,7 @@
         <div class="size col-6">
           <span class="label col-6">Size</span>
           <span class="value col-6">
-            <select ng-change="save(this)" ng-model="basicInfo.Size">
+            <select ng-change="save(this)" ng-model="profile.Size">
               <option>Fine</option>
               <option>Diminutive</option>
               <option>Tiny</option>
@@ -83,7 +83,7 @@
         <div class="gender col-6">
           <span class="label col-6">Gender</span>
           <span class="value col-6">
-            <select ng-change="save(this)" ng-model="basicInfo.Gender">
+            <select ng-change="save(this)" ng-model="profile.Gender">
               <option>Male</option>
               <option>Female</option>
             </select>
@@ -91,23 +91,23 @@
         </div>
         <div class="age col-6">
           <span class="label col-6">Age</span>
-          <span class="value col-6"><input ng-change="save(this)" ng-model="basicInfo.Age"></span>
+          <span class="value col-6"><input ng-change="save(this)" ng-model="profile.Age"></span>
         </div>
         <div class="height col-6">
           <span class="label col-6">Height</span>
-          <span class="value col-6"><input ng-change="save(this)" ng-model="basicInfo.Height"></span>
+          <span class="value col-6"><input ng-change="save(this)" ng-model="profile.Height"></span>
         </div>
         <div class="weight col-6">
           <span class="label col-6">Weight</span>
-          <span class="value col-6"><input ng-change="save(this)" ng-model="basicInfo.Weight"></span>
+          <span class="value col-6"><input ng-change="save(this)" ng-model="profile.Weight"></span>
         </div>
         <div class="eyes col-6">
           <span class="label col-6">Eyes</span>
-          <span class="value col-6"><input ng-change="save(this)" ng-model="basicInfo.Eyes"></span>
+          <span class="value col-6"><input ng-change="save(this)" ng-model="profile.Eyes"></span>
         </div>
         <div class="hair col-6">
           <span class="label col-6">Hair</span>
-          <span class="value col-6"><input ng-change="save(this)" ng-model="basicInfo.Hair"></span>
+          <span class="value col-6"><input ng-change="save(this)" ng-model="profile.Hair"></span>
         </div>
       </div>
     </div>
