--- a/www/templates/combat.html
+++ b/www/templates/combat.html
@@ -3,14 +3,8 @@
     <div class="list card">
       <div class="item item-divider">General</div>
       <div class="item item-body">
-        <div class="name col-6">
-          <span class="label col-5">PV</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="combat.PV"></span>
-        </div>
-        <div class="name col-6">
-          <span class="label col-5">Current PV</span>
-          <span class="value col-7"><input ng-change="save(this)" ng-model="combat.currentPV"></span>
-        </div>
+        <generic-field label='"PV"' namespace='combat.PV'></generic-field>
+        <generic-field label='"Current PV"' namespace='combat.currentPV'></generic-field>
         <div class="name col-6 with-subtitle">
           <span class="label col-4">Iniciative</span>
           <span class="value col-2">
@@ -38,6 +32,7 @@
           </span>
         </div>
       </div>
+
       <div class="item item-divider">Defence</div>
       <div class="item item-body">
         <div class="ac col-12 with-subtitle">
@@ -186,6 +181,7 @@
           </span>
         </div>
       </div>
+
       <div class="item item-divider">Other movement</div>
       <div class="item item-body">
         <div class="col-6 with-subtitle">
