Creates weapon and attack

--- a/www/templates/combat/combat.html
+++ b/www/templates/combat/combat.html
@@ -1,8 +1,10 @@
 <ion-view view-title="Combat">
   <ion-content class="padding">
     <div class="list card">
+      <div ng-include src="'templates/combat/weapon.html'"></div>
       <div ng-include src="'templates/combat/general.html'"></div>
       <div ng-include src="'templates/combat/defence.html'"></div>
+      <div ng-include src="'templates/combat/attack.html'"></div>
       <div ng-include src="'templates/combat/other-movement.html'"></div>
     </div>
   </ion-content>
