Fixes the generic field directive’s saving

--- a/www/templates/combat/defence.html
+++ b/www/templates/combat/defence.html
@@ -12,27 +12,27 @@
       <div class="subtitle">dex</div>
     </span>
     <span class="value col-1 with-plus">
-      <input ng-change="save(this)" ng-model="combat.ac.armor">
+      <input ng-change="saveOld(this)" ng-model="combat.ac.armor">
       <div class="subtitle">armor</div>
     </span>
     <span class="value col-1 with-plus">
-      <input ng-change="save(this)" ng-model="combat.ac.shield">
+      <input ng-change="saveOld(this)" ng-model="combat.ac.shield">
       <div class="subtitle">shield</div>
     </span>
     <span class="value col-1 with-plus">
-      <input ng-change="save(this)" ng-model="combat.ac.natural">
+      <input ng-change="saveOld(this)" ng-model="combat.ac.natural">
       <div class="subtitle">natural</div>
     </span>
     <span class="value col-1 with-plus">
-      <input ng-change="save(this)" ng-model="combat.ac.size">
+      <input ng-change="saveOld(this)" ng-model="combat.ac.size">
       <div class="subtitle">size</div>
     </span>
     <span class="value col-1 with-plus">
-      <input ng-change="save(this)" ng-model="combat.ac.deflection">
+      <input ng-change="saveOld(this)" ng-model="combat.ac.deflection">
       <div class="subtitle">deflection</div>
     </span>
     <span class="value col-1 with-plus">
-      <input ng-change="save(this)" ng-model="combat.ac.misc">
+      <input ng-change="saveOld(this)" ng-model="combat.ac.misc">
       <div class="subtitle">misc</div>
     </span>
   </div>
@@ -46,7 +46,7 @@
       {{combat.touch.base()}}
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.touch.misc">
+      <input ng-change="saveOld(this)" ng-model="combat.touch.misc">
       <div class="subtitle">misc</div>
     </span>
   </div>
@@ -60,7 +60,7 @@
       {{combat.flatFooted.base()}}
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.flatFooted.misc">
+      <input ng-change="saveOld(this)" ng-model="combat.flatFooted.misc">
       <div class="subtitle">misc</div>
     </span>
   </div>
@@ -79,15 +79,15 @@
       <div class="subtitle">wis</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.will.magic">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.will.magic">
       <div class="subtitle">magic</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.will.misc">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.will.misc">
       <div class="subtitle">misc</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.will.temp">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.will.temp">
       <div class="subtitle">temp</div>
     </span>
   </div>
@@ -106,15 +106,15 @@
       <div class="subtitle">con</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.fortitude.magic">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.fortitude.magic">
       <div class="subtitle">magic</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.fortitude.misc">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.fortitude.misc">
       <div class="subtitle">misc</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.fortitude.temp">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.fortitude.temp">
       <div class="subtitle">temp</div>
     </span>
   </div>
@@ -133,15 +133,15 @@
       <div class="subtitle">dex</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.reflex.magic">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.reflex.magic">
       <div class="subtitle">magic</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.reflex.misc">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.reflex.misc">
       <div class="subtitle">misc</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.savings.reflex.temp">
+      <input ng-change="saveOld(this)" ng-model="combat.savings.reflex.temp">
       <div class="subtitle">temp</div>
     </span>
   </div>
