--- a/www/templates/combat/other-movement.html
+++ b/www/templates/combat/other-movement.html
@@ -3,7 +3,7 @@
   <div class="col-6 with-subtitle">
     <span class="label col-5">Swim</span>
     <span class="value col-4">
-      <input ng-change="save(this)" ng-model="speed.swim">
+      <input ng-change="saveOld(this)" ng-model="speed.swim">
       <div class="subtitle">meters</div>
     </span>
     <span class="value col-3">
@@ -14,7 +14,7 @@
   <div class="col-6 with-subtitle">
     <span class="label col-5">Fly</span>
     <span class="value col-4">
-      <input ng-change="save(this)" ng-model="speed.fly">
+      <input ng-change="saveOld(this)" ng-model="speed.fly">
       <div class="subtitle">meters</div>
     </span>
     <span class="value col-3">
@@ -25,7 +25,7 @@
   <div class="col-6 with-subtitle">
     <span class="label col-5">Burrow</span>
     <span class="value col-4">
-      <input ng-change="save(this)" ng-model="speed.burrow">
+      <input ng-change="saveOld(this)" ng-model="speed.burrow">
       <div class="subtitle">meters</div>
     </span>
     <span class="value col-3">
@@ -36,7 +36,7 @@
   <div class="col-6 with-subtitle">
     <span class="label col-5">Climb</span>
     <span class="value col-4">
-      <input ng-change="save(this)" ng-model="speed.climb">
+      <input ng-change="saveOld(this)" ng-model="speed.climb">
       <div class="subtitle">meters</div>
     </span>
     <span class="value col-3">
