--- a/www/templates/combat/weapon.html
+++ b/www/templates/combat/weapon.html
@@ -1,8 +1,7 @@
 <div class="item item-divider">Weapon</div>
 <div class="item item-body">
-  <generic-field label='"Name"' namespace='combat.weapon.name' col-width="12"></generic-field>
-  <generic-field label='"Damage dice"' namespace='combat.weapon.damage.dice' col-width="12"></generic-field>
-
+  <generic-field label='"Name"' namespace='combat.weapon.name' save="save('combat.weapon.name', arg)"></generic-field>
+  <generic-field label='"Damage dice"' namespace='combat.weapon.damage.dice' save="save('combat.weapon.damage.dice', arg)"></generic-field>
 
   <div class="name col-12 with-subtitle">
     <span class="label col-2">Attack</span>
@@ -19,11 +18,11 @@
       <div class="subtitle">str</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.weapon.attackBonus">
+      <input ng-change="saveOld(this)" ng-model="combat.weapon.attackBonus">
       <div class="subtitle">weapon</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.weapon.attackBonusTemp">
+      <input ng-change="saveOld(this)" ng-model="combat.weapon.attackBonusTemp">
       <div class="subtitle">temp</div>
     </span>
   </div>
@@ -39,11 +38,11 @@
       <div class="subtitle">str</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.weapon.damageBonus">
+      <input ng-change="saveOld(this)" ng-model="combat.weapon.damageBonus">
       <div class="subtitle">weapon</div>
     </span>
     <span class="value col-2 with-plus">
-      <input ng-change="save(this)" ng-model="combat.weapon.damageBonusTemp">
+      <input ng-change="saveOld(this)" ng-model="combat.weapon.damageBonusTemp">
       <div class="subtitle">temp</div>
     </span>
   </div>
