--- a/www/templates/profile/basic-information.html
+++ b/www/templates/profile/basic-information.html
@@ -1,13 +1,14 @@
 <div class="item item-divider">Basic information</div>
 <div class="item item-body profile">
-  <generic-field label='"Character name"' namespace='profile.Name' col-width="12"></generic-field>
-  <generic-field label='"Player name"' namespace='profile.Player' col-width="12"></generic-field>
-  <generic-field label='"Character level"' namespace='profile.Level' col-width="12"></generic-field>
+  <generic-field label="'Character name'" namespace="profile.Name" save="save('profile.Name', arg)"></generic-field>
+
+  <generic-field label='"Player name"' namespace='profile.Player' save="save('profile.Player', arg)"></generic-field>
+  <generic-field label='"Character level"' namespace='profile.Level' save="save('profile.Level', arg)"></generic-field>
 
   <div class="alignment col-12">
     <span class="label col-5">Alignment</span>
     <span class="value col-7">
-      <select ng-change="save(this)" ng-model="profile.Alignment">
+      <select ng-change="saveOld(this)" ng-model="profile.Alignment">
         <option>Lawful Good</option>
         <option>Lawful Neutral</option>
         <option>Lawful Evil</option>
@@ -21,7 +22,7 @@
     </span>
   </div>
 
-  <generic-field label='"Campaign"' namespace='profile.Campaign' col-width="12"></generic-field>
-  <generic-field label='"Homeland"' namespace='profile.Homeland'></generic-field>
-  <generic-field label='"Deity"' namespace='profile.Deity'></generic-field>
+  <generic-field label='"Campaign"' namespace='profile.Campaign' save="save('profile.Campaign', arg)"></generic-field>
+  <generic-field label='"Homeland"' namespace='profile.Homeland' save="save('profile.Homeland', arg)"></generic-field>
+  <generic-field label='"Deity"' namespace='profile.Deity' save="save('profile.Deity', arg)"></generic-field>
 </div>
